@@ -94,9 +94,8 @@
     <bridgehead renderas="sect4">Required</bridgehead>
     <para role="required"><xref linkend="pkgconfig"/>,
     <xref linkend="glib2"/>,
-    <xref linkend="dbus"/> (see the <xref linkend="hal-requirements"/>),
+    <xref linkend="dbus"/>,
     <!-- FIXME: Uncomment when the dbus bindings get in the book
-         and remove the hal-requirements blurb
     <xref linkend="dbus-glib"/>,
     -->
     <xref linkend="python"/>, and
@@ -107,6 +106,12 @@
     (with a current <filename>pci.ids</filename> file) and
     <xref linkend="usbutils"/>
     (with a current <filename>usb.ids</filename> file)</para>
+
+    <!-- FIXME: Uncomment when the dbus bindings get in the book
+    <bridgehead renderas="sect4">Optional (to Build
+    <command>hal-device-manager</command>)</bridgehead>
+    <para role="optional"><xref linkend="dbus-python"/></para>
+    -->
 
     <bridgehead renderas="sect4">Optional (to Create Documentation)</bridgehead>
     <para role="optional"><xref linkend="libxml2"/> and
